[package]
name = "rwkv-distill-data"
authors = ["OpenAI Codex <codex@openai.com>"]
description = "Example: build a resumable RWKV distillation data pipeline on JSONL inputs"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rwkv-data = { path = "../../crates/rwkv-data" }

anyhow = "1.0.101"
clap = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sonic-rs = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
