[package]
name = "rwkv-dna-trainer"
authors = ["Cai-z-us <caizus@rwkvos.com>"]
description = "Example: orchestrate RWKV DNA model training via rwkv-train-cli components"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
burn = { workspace = true }
burn-fusion = { workspace = true }
burn-cubecl = { workspace = true }
burn-ir = { workspace = true }

tokio = { workspace = true }
log = { workspace = true }
clia-tracing-config = { workspace = true }
chrono = { workspace = true }

rwkv-config = { path = "../../crates/rwkv-config" }
rwkv-data = { path = "../../crates/rwkv-data" }
rwkv-lm = { path = "../../crates/rwkv-lm" }
rwkv-train-cli = { path = "../../crates/rwkv-train-cli" }

