[package]
name = "rwkv-lm-eval"
authors = ["Cai-z-us <caizus@rwkvos.com>"]
description = "Example: "
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
rwkv-eval = { path = "../../crates/rwkv-eval" }
rwkv-config = { path = "../../crates/rwkv-config" }
async-openai = { version = "0.33.0", default-features = false, features = ["rustls", "completions", "byot"] }
tokio = { workspace = true }
