[package]
name = "rwkv-lm"
authors = ["Cai-z-us <caizus@rwkvos.com>"]
description = "Example: RWKV Language model"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = [
    "training",
    "inferring",
    "cuda",
    "ddp",
    "pth2mpk",
    "std"
]
statetune = []
statepass = []
f32 = []
flex32 = []
f16 = []
fusion = ["rwkv/fusion"]
cubecl = ["rwkv/cubecl"]
autotune = ["rwkv/autotune"]
metrics = ["rwkv/metrics"]
nn = ["rwkv/nn"]
std = ["rwkv/std"]
tui = ["rwkv/tui"]
wgpu = ["rwkv/wgpu"]
vulkan = ["rwkv/vulkan"]
cuda = ["rwkv/cuda"]
rocm = ["rwkv/rocm"]
metal = ["rwkv/metal"]
ddp = ["rwkv/collective"]
pth2mpk = ["rwkv/store", "rwkv/cubecl", "nn", "std"]
training = ["rwkv/train", "rwkv/cubecl", "metrics", "std"]
inferring = [
    "dep:rwkv-infer",
    "dep:tokio",
    "dep:axum",
    "dep:clia-tracing-config",
    "rwkv/data",
    "cubecl",
    "nn",
    "std"
]

[dependencies]
log = "0.4.29"
sonic-rs = { version = "0.5.6" }
rwkv = { path = "../../crates/rwkv", default-features = false }
rwkv-infer = { path = "../../crates/rwkv-infer", optional = true }
tokio = { workspace = true, optional = true }
axum = { version = "0.7.9", features = ["tokio"], optional = true }
clia-tracing-config = { workspace = true, optional = true }

# Utils
derive-new = { workspace = true }
