[package]
name = "rwkv-lm"
authors = ["Cai-z-us <caizus@rwkvos.com>"]
description = "Example: RWKV Language model"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "rwkv-lm-infer-bench"
path = "benches/rwkv-lm-infer-bench.rs"
harness = false
required-features = ["inferring"]

[features]
default = [
    "training",
    "inferring",
    "fusion",
    "cuda",
    "ddp",
    "pth2bpk",
    "std"
]
statetune = []
statepass = []
f32 = []
flex32 = []
bf16 = []
f16 = []
fusion = ["rwkv/fusion"]
cubecl = ["rwkv/cubecl"]
autotune = ["rwkv/autotune"]
metrics = ["rwkv/metrics"]
nn = ["rwkv/nn"]
std = ["rwkv/std"]
tui = ["rwkv/tui"]
wgpu = ["rwkv/wgpu"]
vulkan = ["rwkv/vulkan"]
cuda = ["rwkv/cuda"]
rocm = ["rwkv/rocm"]
metal = ["rwkv/metal"]
ddp = ["rwkv/collective"]
pth2bpk = ["rwkv/store", "rwkv/cubecl", "nn", "std"]
training = ["rwkv/train", "rwkv/cubecl", "metrics", "std"]
trace = ["rwkv/trace", "dep:tracing"]
ipc = ["rwkv/infer-ipc"]
inferring = [
    "dep:tokio",
    "dep:axum",
    "dep:clia-tracing-config",
    "rwkv/infer",
    "rwkv/store",
    "cubecl",
    "nn",
    "std"
]

[dependencies]
log = { workspace = true }
sonic-rs = { workspace = true }
rwkv = { path = "../../crates/rwkv", default-features = false }
rwkv-bench = { path = "../../crates/rwkv-bench" }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
clia-tracing-config = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
itertools = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# Utils
derive-new = { workspace = true }

[dev-dependencies]
kuva = { workspace = true }
tokio = { workspace = true }
